force-app/main/default/objects/ucinn_ascendv2__Minor_Code__c/ucinn_ascendv2__Minor_Code__c.object-meta.xml
<CustomObject>
    <description>Minors associated with academic organizations.</description>
    <label>Minor Code</label>
    <nameField>
        <label>Minor Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Minor Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>