force-app/main/default/objects/ucinn_ascendv2__Minor_Code__c/fields/ucinn_ascendv2__Academic_Organization__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Academic_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Organization</label>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Minor Codes</relationshipLabel>
    <relationshipName>Minor_Codes_Academic_Organization</relationshipName>
    <type>Lookup</type>
</CustomField>