force-app/main/default/objects/ucinn_ascendv2__Minor_Code__c/fields/ucinn_ascendv2__Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Description__c</fullName>
    <description>Minor Code Description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>