force-app/main/default/objects/ucinn_ascendv2__Minor_Code__c/fields/ucinn_ascendv2__Minor__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Minor__c</fullName>
    <label>Minor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>