force-app/main/default/objects/ucinn_ascendv2__Minor_Code__c/fields/ucinn_ascendv2__School_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School_Code__c</fullName>
    <label>School Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>